# Einstein_BlueShadow

./: .gitignore  Logger.py  README.md  board.py  game.py  game_without_GUI.py  logger.py  main.py  requirements.txt  test.py  test_agent.py  train.py
Agents/alpha_beta/src/: CMakeLists.txt  extern.cpp  extern.h  logic.cpp  logic.h
Agents/alpha_beta_boost/src/: CMakeLists.txt  logic.cpp  logic.h
UCT/: Board.py  Einstein.py  UCT.py
enums/: Agents.py  chess.py  mode.py  strategy.py
game_record/: WTN-player1 vs player2-先手胜-2023.07.27 12:30 成都-2023 CCGC.txt  WTN-player1vsplayer2-先手胜202307312006_副本.txt  WTN-player2 vs player1-先手胜-2023.07.31 20:07 线上-2023 CCGC.txt  WTN-player2 vs player1-先手胜-2023.07.31 2207 线上-2023 CCGC.txt  WTN-player2 vs player1-先手胜-2023.08.01 11:32 线上-2023 CCGC.txt  WTN-player2 vs player1-后手胜-2023.07.27 12:27 成都-2023 CCGC.txt  WTN-player2 vs player1-后手胜-2023.07.27 12:29 成都-2023 CCGC.txt  WTN-player2 vs player1-后手胜-2023.07.27 12:31 成都-2023 CCGC.txt  WTN-player2 vs player1-后手胜-2023.07.31 20:39 线上-2023 CCGC.txt  WTN-player2 vs player1-后手胜-2023.07.31 20:54 线上-2023 CCGC.txt  WTN-player2vsplayer1-后手胜-2023.07.312152 a-2023CCGC.txt  WTN-啊外vstest啊-后手胜-202308032259 线上-2023 CCGC.txt  test.txt
logic/: board.py  huamn.py
test_result/: 2023-07-19_18-37-49_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=1.414.txt.txt  2023-07-19_20-05-06_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=1.414.txt.txt  2023-07-19_20-22-39_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=1.414.txt.txt  2023-07-19_20-25-23_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=2.5.txt.txt  2023-07-19_21-05-25_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=2.5.txt.txt  2023-07-19_21-10-27_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=2.5.txt.txt  2023-07-19_22-47-18_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=1.414.txt.txt  2023-07-19_23-02-11_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=1.414.txt.txt  2023-07-20_09-32-55_UCT_mutiprocess_Player_vs_UCTPlayer_C_out=1.96 mininum_stimulate_times=50000 time limit=15s.txt.txt  2023-07-23_00-06-35_UCTPlayer_vs_Alpha_beta_player_.txt.txt  (+39 more)
(+285 files in other folders)
